--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ with the help of my college group.</p>
           </ul>
         </div>
         <div class='job-title'>
-          <span>10.2020 - 11.2020</span> <strong>Google Cloud 30 Day Workshop</strong><br> <strong>Position:</strong> Web developer Intern
+          <span>10.2020 - 11.2020</span> <strong>Google Cloud 30 Day Workshop</strong>
         </div>
         <div>
           
