--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ with the help of my college group.</p>
       <h3>Internships and Workshops</h3>
       <article>
         <div class='job-title'>
-          <span>08.2021 - 09.2021</span> <strong>Learnovate Ecommerce</strong><strong>Position:</strong> Web developer Intern
+          <span>08.2021 - 09.2021</span> <strong>Learnovate Ecommerce</strong><br><strong>Position:</strong> Web developer Intern
         </div>
         <div>
           
